@@ -1,7 +1,7 @@
 package de.mediathekview.mserver.crawler.phoenix.tasks;
 
 import com.google.gson.reflect.TypeToken;
-import de.mediathekview.mlib.daten.Film;
+import de.mediathekview.mserver.daten.Film;
 import de.mediathekview.mserver.crawler.basic.AbstractCrawler;
 import de.mediathekview.mserver.crawler.basic.AbstractRecursiveConverterTask;
 import de.mediathekview.mserver.crawler.basic.CrawlerUrlDTO;
@@ -14,10 +14,11 @@ import jakarta.ws.rs.client.WebTarget;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import javax.annotation.Nullable;
+import jakarta.annotation.Nullable;
 import java.lang.reflect.Type;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Optional;
 import java.util.Queue;
 import java.util.Set;
@@ -80,8 +81,8 @@ public class PhoenixFilmDetailTask extends ZdfTaskBase<Film, CrawlerUrlDTO> {
           film.setTitel(filmDetailDto.getTitle());
           if (filmDetailDto.getWebsite().isPresent()) {
             try {
-              film.setWebsite(new URL(filmDetailDto.getWebsite().get()));
-            } catch (MalformedURLException e) {
+              film.setWebsite(new URI(filmDetailDto.getWebsite().get()).toURL());
+            } catch (MalformedURLException | URISyntaxException e) {
               LOG.error("invalid url: ", e);
             }
           }
